# ragaman

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp  notes.db  pyproject.toml
.github/workflows/: ci.yml
docs/guides/: mcp_example.py
src/ragaman/: __init__.py  main.py  mcp_server.py
src/ragaman/api/: dependencies.py
src/ragaman/api/v1/: router.py
src/ragaman/api/v1/endpoints/: notes.py
src/ragaman/core/: config.py
src/ragaman/notes/: __init__.py  embedding.py  model.py  repository.py
src/ragaman/schemas/: __init__.py  note.py
src/ragaman/subpackage/: __init__.py  module.py
tests/: conftest.py  test_module.py
tests/test_notes/: __init__.py  test_embedding.py  test_model.py  test_repository.py
tests/test_subpackage/: __init__.py  test_module.py
