[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragaman"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Author Name", email = "author.email@example.com"},
]
dependencies = [
    "openai>=1.0.0",
    "sqlite-utils>=3.30",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=src", "--cov-report=term-missing"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "YTT", "C4", "DTZ"]
ignore = []
