[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragaman"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Author Name", email = "author.email@example.com"},
]
dependencies = [
    "openai>=1.0.0",
    "sqlite-utils>=3.30",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "mcp-python>=0.1.4",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=src", "--cov-report=term-missing"]
testpaths = ["tests"]

[project.scripts]
mcp = "ragaman.main --mode mcp"
